syntax = "proto3";

package goddess.api.v1;

option go_package = "github.com/aide-family/goddess/pkg/api/v1;v1";

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "magicbox/enum/enum.proto";

service MemberService {
    rpc InviteMember(InviteMemberRequest) returns (InviteMemberReply) {
        option (google.api.http) = {
            post: "/v1/member/invite"
            body: "*"
        };
    }
    rpc DismissMember(DismissMemberRequest) returns (DismissMemberReply) {
        option (google.api.http) = {
            delete: "/v1/member/{uid}"
        };
    }
    rpc ListMember(ListMemberRequest) returns (ListMemberReply) {
        option (google.api.http) = {
            get: "/v1/members"
        };
    }
    rpc SelectMember(SelectMemberRequest) returns (SelectMemberReply) {
        option (google.api.http) = {
            get: "/v1/members/select"
        };
    }
    rpc GetMember(GetMemberRequest) returns (MemberItem) {
        option (google.api.http) = {
            get: "/v1/member/{uid}"
        };
    }
    rpc UpdateMemberStatus(UpdateMemberStatusRequest) returns (UpdateMemberStatusReply) {
        option (google.api.http) = {
            put: "/v1/member/{uid}/status"
            body: "*"
        };
    }
}

message MemberItem {
    int64 uid = 1;
    string email = 2;
    magicbox.enum.GlobalStatus status = 3;
    int64 createdAt = 4;
    int64 updatedAt = 5;
    int64 userUID = 6;
    string name = 7;
    string nickname = 8;
    string avatar = 9;
    string remark = 10;
}

message SelectMemberItem {
    int64 value = 1;
    string label = 2;
    bool disabled = 3;
    string tooltip = 4;
}

message InviteMemberRequest {
    string email = 1 [(buf.validate.field).required = true, (buf.validate.field).cel = {
      expression: "this.isEmail()",
      message: "email must be a valid email address",
    }];
    uint32 roleUID = 2;
}
message InviteMemberReply {
    string message = 1;
}

message DismissMemberRequest {
    int64 uid = 1 [(buf.validate.field).required = true];
}
message DismissMemberReply {
    string message = 1;
}

message ListMemberRequest {
    int32 page = 1 [(buf.validate.field).required = true, (buf.validate.field).cel = {
        expression: "this >= 1",
        message: "page must be greater than or equal to 1",
    }];
    int32 pageSize = 2 [(buf.validate.field).required = true, (buf.validate.field).cel = {
        expression: "this >= 1 && this <= 200",
        message: "pageSize must be greater than or equal to 1 and less than or equal to 200",
    }];
    int64 userUID = 3;
    magicbox.enum.GlobalStatus status = 4;
    int64 memberUID = 5;
    string keyword = 6 [(buf.validate.field).cel = {
        expression: "this.size() <= 200",
        message: "keyword must be less than or equal to 200",
    }];
    string email = 7 [(buf.validate.field).cel = {
        expression: "this.size() <= 200",
        message: "email must be less than or equal to 200",
    }];
}
message ListMemberReply {
    repeated MemberItem items = 1;
    int64 total = 2;
    int32 page = 3;
    int32 pageSize = 4;
}

message SelectMemberRequest {
    string keyword = 1 [(buf.validate.field).cel = {
        expression: "this.size() <= 200",
        message: "keyword must be less than or equal to 200",
    }];
    int32 limit = 2 [(buf.validate.field).required = true, (buf.validate.field).cel = {
        expression: "this >= 1 && this <= 100",
        message: "limit must be greater than or equal to 1 and less than or equal to 100",
    }];
    int64 lastUID = 3;
    magicbox.enum.GlobalStatus status = 4;
}
message SelectMemberReply {
    repeated SelectMemberItem items = 1;
    int64 total = 2;
    int64 lastUID = 3;
    bool hasMore = 4;
}

message GetMemberRequest {
    int64 uid = 1 [(buf.validate.field).required = true];
}

message UpdateMemberStatusRequest {
    int64 uid = 1 [(buf.validate.field).required = true];
    magicbox.enum.GlobalStatus status = 2 [(buf.validate.field).required = true, (buf.validate.field).cel = {
        expression: "this in [magicbox.enum.GlobalStatus.ENABLED, magicbox.enum.GlobalStatus.DISABLED]",
        message: "status must be in ['ENABLED', 'DISABLED']",
    }];
}
message UpdateMemberStatusReply {
    string message = 1;
}